2007-02-06  Oliver Hader  <oh@inpublica.de>

	* Fixed bug 3985: Wrong substitution for spamProtectEmailAddresses_atSubst/spamProtectEmailAddresses_lastDotSubst

2007-02-06  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4742: link to user on User Admin page is following to wrong URL

2007-02-06  Michael Stucki  <michael@typo3.org>

	* Added feature #4592: Keep indexed_search tables consistent when deleting/hiding pages (Thanks to Michael Fritz)
	* Fixed bug #4666: Use TYPO3 settings when formatting dates
	* Fixed bug #4581: Duplicate entry on cache_pagesection on reloading twice. See bugtracker entry for details about this change.
	* Added feature #4536: Add new property "additionalParams" to GMENU items / Cleanup in tslib_menu
	* Fixed bug #3069 again: Ignore version check if no requirements are specified
	* indexed_search: Turn off maxAge setting as this "feature" seems to make no sense at all
	* Fixed bug #4689: Error in t3lib_tcemain while entering a number like 50 or 50.00 into a double2 field
	* Fixed bug #3544: RTE-config in PageTS-config not loaded when in draft-workspace

2007-02-05  Ingmar Schlecht  <ingmar@typo3.org>

	* Lots of <label> tags added to checkbox labels throughout the core (Thanks to Ingo Renner for this big patch!)

2007-02-05  Oliver Hader  <oh@inpublica.de>

	* Bugfix for TSconfig overriding TCA field configuration
	* Fixed bug 4758: Page with doktype 3 (external URL) and e-mail as URL could be shown directly

2007-02-04  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added icon to edit record of page overlay for a translated page

2007-02-04  Michael Stucki  <michael@typo3.org>

	* Extended db_mountpoint and file_mountpoint fields into to 255 bytes size
	* Fixed bug #3069: Extension manager crashed because of some PHP bug with version_compare() (thanks to Rainer Haertlein who discovered the solution to this problem)
	* Changed t3lib_basicFileFunctions to use filemtime() instead of filectime()